# Font-Shax

./: Cargo.toml
src/: lib.rs  main.rs
src/bitmap/: mod.rs  pixels.rs  projection.rs
src/font/: atlas.rs  mod.rs
src/rasterizer/: mod.rs  vectors.rs  windings.rs
