[package]
name = "shax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drowsed_math = { path="../drowsed_math/", features = [] }
image = "0.24.6"
libc = "0.2.147"
num-traits = "0.2.16"
ttf-parser = "0.19.1"